# network-programmability-stream

./: .gitignore  LICENSE  Pipfile  README.md  netbox_api_interaction.py  pyproject.toml  python_ssh.py  requirements-dev.txt  requirements.txt  setup.cfg
ansible/lab-system/: debug.yml  lab-system.yml
ansible/lab-system/action_plugins/: deployment_setup.py
ansible/lab-system/group_vars/: matrix-switches.yml
ansible/lab-system/host_vars/: matrix-3.yml
ansible/lab-system/templates/: l2_interfaces.j2  matrix.j2
ansible/lab-system/vars_plugins/: load_lab_templates.py
ansible/network-programmability-lab/: ansible.cfg  collect_outputs.yml  debug.yml  debug2.yml  hosts  netconf-examples.yml  result.cfg
async/: gather_commands_async.py  http-requests-async.py  http-requests-async2.py  http-requests-sync.py  http-requests-threads.py  netdev-async.py  restconf-async.py
async/collect_mac_address_tables/: mac_address_table_inventory.yml
batfish/: pyproject.toml
chatops-webex-teams/: README.md  pyproject.toml  requirements.txt
chatops-webex-teams/network_overwatch/: app.py  command_handler.py  constants.py  restconf.py  webex_teams.py  webhook_manager.py
chatops-webex-teams/payload-examples/: webex-message-direct.json  webex-message-group.json  webex-webhook.json
juniper/: vars.yml
model-driven-telemetry/: README.md
model-driven-telemetry/grpc/: docker-compose.yml  router.cfg
model-driven-telemetry/netconf/: docker-compose.yml  pyproject.toml  requirements.txt
model-driven-telemetry/netconf/code/: constants.py  nc_dial_in_subscribe.py  test_xpath.py  utils.py
model-driven-telemetry/netconf/rpc-examples/: on-change-cdp-oper.xml  periodic-subscription-kernel-cpu.xml
napalm/: sandbox.py
netconf/: example.py  netconf-rpc-examples.xml  netconf.py  pyproject.toml  requirements.txt  ydk-sample.py
netconf/rpc-examples/: edit-config-hostname-vrfs-loopback.xml  get-config.xml  get-vrf-config-xpath.xml  hello.xml
netprog-stream-django/: Dockerfile  Dockerfile-dev  docker-compose.dev.yml  pyproject.toml  requirements.txt
netprog-stream-django/data/: dump.rdb
netprog-stream-django/netprog-stream-django/network/: urls.py
netprog-stream-django/netprog-stream-django/network/templates/: device.html
netprog-stream-django/netprog_stream/netprog_stream/: celery.py  settings.py  urls.py
netprog-stream-django/netprog_stream/network/: models.py  tasks.py  urls.py  views.py
netprog-stream-django/netprog_stream/network/migrations/: 0001_initial.py
netprog-stream-django/netprog_stream/network/templates/: base.html  device.html
netprog_stream_django/: manage.py
netprog_stream_django/netprog_stream/: settings.py  wsgi.py
netprog_stream_django/network/: admin.py  views.py
network-diagram-visualization-js/: .prettierrc.toml  README.md  package.json
network-diagram-visualization-js/src/: App.vue  main.js
network-testing/: config.yaml  index.html  output.json  pyproject.toml  pytest_html_report.html  report.html  run.py  sandbox.py  show_version_genie.json  show_vrf_genie.json
network-testing/archive/: output_1627244146.4446151.json  output_1627245494.3762355.json  output_1627245610.0961397.json  output_1627245669.0459423.json  output_1627245790.8800066.json  output_1627245841.1603637.json
network-testing/inventories/10-csr-local/: defaults.yaml  groups.yaml  hosts.yaml
network-testing/inventory/: defaults.yaml  groups.yaml  hosts.yaml
network-testing/old-2018-stream/tests_2018/: conftest.py  krk_vlans.yaml  test_krk_stp.py
network-testing/output/cli/: R10_2021-07-25T19:09:08.txt  R1_2021-07-25T19:09:08.txt  R2_2021-07-25T19:09:08.txt  R3_2021-07-25T19:09:08.txt  R4_2021-07-25T19:09:08.txt  R5_2021-07-25T19:09:08.txt  R6_2021-07-25T19:09:08.txt  R7_2021-07-25T19:09:08.txt  R8_2021-07-25T19:09:08.txt  R9_2021-07-25T19:09:08.txt
network-testing/tests/: conftest.py  test_krk_stp.yaml  test_krk_vlans.py  test_sw_version.py  test_vrfs.py
nornir/exploring/: ansible-config.yaml  config.yaml  main.py  new.py
nornir/lab-system/: config-ansible.yaml  config.yaml  constants.py  deployment.py  main.py  setup.py  utils.py
nornir/network_diagram/: config.yaml  constants.py  interface.py  link.py  main.py  pyproject.toml
nornir/network_diagram/inventory/10-csrs_gns3/: defaults.yaml  hosts.yaml
nso/: test_api.py
pyats/intro/: main.py  testbed.yaml
python-ssh/: inventory.yml  python_async_ssh.py  python_ssh.py  requirements.txt
salt/: docker-compose-dev.yml  docker-compose.yml  master  proxy
salt/pillar/: R1_pillar.sls  dummy_pillar.sls  junos_pillar.sls  top.sls
salt/states/: test.sls
scrapli-apps/: README.md  constants.py  nc-ncclient.py  nc-scrapli-asyncio.py  nc-scrapli.py  pyproject.toml  requirements.txt  scrapli-cfg.py  ssh-netmiko.py  ssh-scrapli-asyncio.py  ssh-scrapli.py  test-scrapli-replay.py  utils.py
scrapli-apps/input/: R1.txt  nc-config.yaml
scrapli-apps/scrapli_replay_sessions/: test_get_serial_num.yaml
scripts/: collect_mac_address_tables.py  collect_mac_address_tables_async.py  create_config_templates.py  helper.py  inventory.yml  netbox_api_interaction.py  python_async_ssh.py  python_ssh.py  requirements.txt
scripts/ansible/: ansible.cfg  collect_facts.yml  hosts.yml  provision.yml  test.yml
scripts/collect_mac_address_tables/: collection_serial.py  collection_threading.py
scripts/juniper/: example.py  inventory.yml
scripts/netconf/: netconf-rpc-examples.xml
scripts/practice/: aiohttp_netbox.py
scripts/templates/: management-interface.j2
telemetry/: debug.py  docker-compose-opentsdb.yml  docker-compose.yml  notes.txt  subscribe.py
vault/: netmiko-vault.py
(+110 files in other folders)
