[tool.poetry]
name = "network-programmability-lab"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]

[tool.poetry.dependencies]
python = ">3.6"
requests = "^2.19"
netmiko = "^2.2"
"ruamel.yaml" = "^0.15.46"
netdev = "^0.9.0"
python-decouple = "^3.1"
ansible = "^2.6"
Jinja2 = "^2.10"
aiohttp = "^3.3"
junos-eznc = "^2.1"
xmltodict = "^0.11.0"
ncclient = "^0.6.0"
django = "^2.1"

[tool.poetry.dev-dependencies]
ipython = "^6.5"
ipdb = "^0.11.0"
