[tool.poetry]
name = "batfish"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]

[tool.poetry.dependencies]
python = "~3.6"
pybatfish = {git = "https://github.com/batfish/pybatfish.git"}
jupyter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
