[tool.poetry]
name = "network-overwatch"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
starlette = "*"
uvicorn = "*"
httpx = "*"

[tool.poetry.dev-dependencies]
bpython = "*"
pdbpp = "*"
flake8 = "*"
black = "19.10b0"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
